--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
+    "emailjs": "^4.0.3",
     "framer-motion": "^12.11.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -17,6 +20,7 @@
     "react-loading-icons": "^1.1.0",
     "react-router": "^7.6.0",
     "react-scripts": "5.0.1",
+    "three": "^0.177.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
