--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/drei": "^10.3.0",
-    "@react-three/fiber": "^9.1.2",
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -20,7 +19,6 @@
     "react-loading-icons": "^1.1.0",
     "react-router": "^7.6.0",
     "react-scripts": "5.0.1",
-    "three": "^0.177.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
