--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-loading-icons": "^1.1.0",
     "react-router": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
